--- a/application.yml
+++ b/application.yml
@@ -1,13 +1,16 @@
-server: 
-  port: 3344 
-  
+spring: 
+  profiles: 
+  active: 
+  - dev 
+---
 spring:
+  prifiles: dev
   application:
-    name:  springcloud-config
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/liangweidongIT/springcloud_config.git #GitHub上面的git仓库名字
+    name:  springcloud-config-dev
+ ---
+spring:
+  prifiles: test
+  application:
+    name:  springcloud-config-test
  
 
