--- a/application.yml
+++ b/application.yml
@@ -6,11 +6,11 @@ spring:
 spring:
   profiles: dev
   application:
-    name:  springcloud-config-dev1
+    name:  springcloud-config-dev
 ---
 spring:
   profiles: test
   application:
-    name:  springcloud-config-test1
+    name:  springcloud-config-test
  
 
