--- a/application-config-client.yml
+++ b/application-config-client.yml
@@ -12,7 +12,7 @@ server:
 eureka: 
   client: 
     service-url: 
-      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
+      defaultZone: http://eureka7001.com:7001/eureka
 ---
 spring:
   profiles: test
@@ -23,5 +23,5 @@ server:
 eureka: 
   client: 
     service-url: 
-      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
+      defaultZone: http://eureka7002.com:7002/eureka
 
